--- a/index.html
+++ b/index.html
@@ -4,6 +4,5 @@
 
 layout: home
 title: Home
-banner: "/assets/images/banners/download (1).png"
+banner: /assets/images/banners/watermelon_4x.png
 ---
-#watermelon_4x.png
