--- a/about.html
+++ b/about.html
@@ -6,5 +6,10 @@ title: About
 <h2>About</h2>
 
 <p>
-Hello, this is my blog. I'm going to update it every now and then. I'll keep a guide / running track of what I learn about cybersecurity.
+Hello, this is my blog. I'm going to update it every now and then. I'll keep a guide / running track of what I learn about cybersecurity. 
 </p>
+
+
+<h3>About Me</h3>
+<p>I have a <a href="https://github.com/M-watermelon"> github page</a> where you can view the source code to <a href="https://github.com/M-watermelon/WatermelonBlog"> my website </a> and more of my projects.</p>
+
