--- a/about.html
+++ b/about.html
@@ -13,3 +13,17 @@ Hello, this is my blog. I'm going to update it every now and then. I'll keep a g
 <h3>About Me</h3>
 <p>I have a <a href="https://github.com/M-watermelon"> github page</a> where you can view the source code to <a href="https://github.com/M-watermelon/WatermelonBlog"> my website </a> and more of my projects.</p>
 
+<h4>Skills</h4>
+<p>
+ - General
+    - Basic linux terminal skills
+- Programming
+    - Python
+    - HTML/CSS
+    - Javascript
+ - Cybersecurity/CTF (I have multiple future guides/blog posts planned for these topics)
+    - Forensics
+    - Using tools such as stegsolve, exiftool, binwalk, sleuthkit, etc
+    - Cryptography 
+     
+</p>
