--- a/about.html
+++ b/about.html
@@ -6,14 +6,12 @@ title: About
 <h2>About</h2>
 
 <p>
-Hello, this is my blog. I'm going to update it every now and then. I'll keep a guide / running track of what I learn about cybersecurity. 
+Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to update it with new posts pretty often. I'll keep a guide / running track of what I learn about cybersecurity. I can be contacted at <span style="color:#62578a;">m.watermelon20@gmail.com</span>.
 </p>
 <link rel="shortcut icon" type="image/png" href="assets/images/banners/favicon.png">
+<p>I have a <a href="https://github.com/M-watermelon"> github page (M-watemelon)</a> where you can view the source code to <a href="https://github.com/M-watermelon/WatermelonBlog"> my website </a> and more of my projects.</p>
 
-<h3>About Me</h3>
-<p>I have a <a href="https://github.com/M-watermelon"> github page</a> where you can view the source code to <a href="https://github.com/M-watermelon/WatermelonBlog"> my website </a> and more of my projects.</p>
-
-<h4>Skills</h4>
+<h2>Skills</h2>
 <dl>
   <dt>General</dt>
   <dd>- Basic linux terminal skills</dd>
