--- a/about.html
+++ b/about.html
@@ -12,15 +12,58 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
 <p>I have a <a href="https://github.com/M-watermelon"> github page (M-watemelon)</a> where you can view the source code to <a href="https://github.com/M-watermelon/WatermelonBlog"> my website </a> and more of my projects.</p>
 
 <h2>Skills</h2>
-<dl>
-  <dt>General</dt>
-  <dd>- Basic linux terminal skills</dd>
-  <dt>Programming</dt>
-  <dd>- Python</dd>
-  <dd>- HTML/CSS</dd>
-  <dd>- Javascript</dd>
-  <dt>Cybersecurity/CTF (I have multiple future guides/blog posts planned for these topics)</dt>
-  <dd>- Forensics (Using tools such as stegsolve, exiftool, binwalk, sleuthkit, etc)</dd>
-  <dd>- Cryptography </dd>
-</dl>
+<h4>I earned the bronze badge in the 2022 Cyberstart America Competition.</h4>
 
+<img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/CyberStart America - CyberStart America Bronze Award 2021-22 - 2022-04-11.png?raw=true" alt="Bronze badge">
+
+<dl>
+  <dt>- Forensics:</dt>
+    <dt>- Steganography -> the method of hiding information inside files (often inside images).</dt>
+      <dd>- Pixel inversion</dd>
+      <dd>- Audio steganography</dd>
+      <dd>- Video steganography</dd>
+      <dd>- Image overlapping</dd>
+      <dd>- Stegsolve</dd>
+    <dd>- Binwalk</dd>
+    <dd>- Hexdump</dd>
+    <dd>- Sleuthkit</dd>
+    <dd>- Exiftool</dd>
+    <dd>- Sonic Visualizer</dd>
+    <dd>- Mimetype</dd>
+    <dd>- Strings</dd>
+    <dd>- unar</dd>
+    <dd>- ar</dd>
+    <dd>- 7zip</dd>
+
+  <dt>- Binary exploitation:</dt>
+    <dd>- Endian: Big Endian and Little Endian<dd>
+
+  <dt>- Basic linux terminal skills </dt>
+  
+  <dt>- Reverse engineering:</dt>
+    <dd>- GDB -> GNU Project Debugger</dd>
+
+  <dt>- Cryptography:</dt>
+    <dd>- RSA algorithm</dd>
+    <dd>- Diffie-Hellman key exchange</dd>
+    <dd>- Pollard-Rho algorithm</dd>
+    <dd>- Weak RSA primes, weak N value</dd>
+    <dd>- Salts and Hashes (MD5, SHA-256, MD4, etc)</dd>
+    <dd>- Symmetric and asymmetric key encryption</dd>
+    <dd>- Public and private keys</dd>
+    <dd>- Timing attack</dd>
+    <dd>- Frequency attack</dd>
+    <dd>- Railfence cipher</dd>
+    <dd>- Columnar transposition cipher</dd>
+    <dd>- Transposition/Permutation cipher: eg (1,2,3) -> (2,1,3)</dd>
+    <dd>- Caesar cipher</dd>
+    <dd>- Substitution cipher & frequency analysis</dd>
+    <dd>- Vignere cipher</dd>
+    <dd>- Arnold cipher</dd>
+
+  <dt>Programming</dt>
+    <dd>- Python</dd>
+    <dd>- HTML/CSS</dd>
+    <dd>- Javascript</dd>
+
+</dl>
