--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
 
 <dl>
   <dt>- Forensics:</dt>
-    <dt>- Steganography -> the method of hiding information inside files (often inside images).</dt>
+    <dt>- Steganography</dt>
       <dd>- Pixel inversion</dd>
       <dd>- Audio steganography</dd>
       <dd>- Video steganography</dd>
