--- a/about.html
+++ b/about.html
@@ -17,11 +17,9 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
 <img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/CyberStart America - CyberStart America Bronze Award 2021-22 - 2022-04-11.png?raw=true" alt="Bronze badge">
 
 <dl>
-  <dt>- Forensics:</dt>
-    <dt>- Steganography</dt>
+  <dt>Forensics:</dt>
+    <dd>- Steganography</dd>
       <dd>- Pixel inversion</dd>
-      <dd>- Audio steganography</dd>
-      <dd>- Video steganography</dd>
       <dd>- Image overlapping</dd>
       <dd>- Stegsolve</dd>
     <dd>- Binwalk</dd>
@@ -35,15 +33,18 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
     <dd>- ar</dd>
     <dd>- 7zip</dd>
 
-  <dt>- Binary exploitation:</dt>
-    <dd>- Endian: Big Endian and Little Endian<dd>
+  <dt>Binary exploitation:</dt>
+    <dd>- Endian: Big Endian and Little Endian</dd>
 
-  <dt>- Basic linux terminal skills </dt>
+  <dt>General</dt>
+    <dd>- Basic linux terminal skills </dd>
+    <dd>- Binary</dd>
+    <dd>- Hexadecimal</dd>
   
-  <dt>- Reverse engineering:</dt>
+  <dt>Reverse engineering:</dt>
     <dd>- GDB -> GNU Project Debugger</dd>
 
-  <dt>- Cryptography:</dt>
+  <dt>Cryptography:</dt>
     <dd>- RSA algorithm</dd>
     <dd>- Diffie-Hellman key exchange</dd>
     <dd>- Pollard-Rho algorithm</dd>
