--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
 <img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/CyberStart America - CyberStart America Bronze Award 2021-22 - 2022-04-11.png?raw=true" alt="Bronze badge">
 
 <dl>
-  <dt>Forensics:</dt>
+  <h4>Forensics:</h4>
     <dd>- Steganography</dd>
       <dd>- Pixel inversion</dd>
       <dd>- Image overlapping</dd>
@@ -33,18 +33,15 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
     <dd>- ar</dd>
     <dd>- 7zip</dd>
 
-  <dt>Binary exploitation:</dt>
+  <h4>Binary exploitation:</h4>
     <dd>- Endian: Big Endian and Little Endian</dd>
 
-  <dt>General</dt>
+  <h4>General</h4>
     <dd>- Basic linux terminal skills </dd>
     <dd>- Binary</dd>
     <dd>- Hexadecimal</dd>
-  
-  <dt>Reverse engineering:</dt>
-    <dd>- GDB -> GNU Project Debugger</dd>
 
-  <dt>Cryptography:</dt>
+  <h4>Cryptography:</h4>
     <dd>- RSA algorithm</dd>
     <dd>- Diffie-Hellman key exchange</dd>
     <dd>- Pollard-Rho algorithm</dd>
@@ -62,7 +59,7 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
     <dd>- Vignere cipher</dd>
     <dd>- Arnold cipher</dd>
 
-  <dt>Programming</dt>
+  <h4>Programming</h4>
     <dd>- Python</dd>
     <dd>- HTML/CSS</dd>
     <dd>- Javascript</dd>
