--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
   <h4>Binary exploitation:</h4>
     <dd>- Endian: Big Endian and Little Endian</dd>
 
-  <h4>General</h4>
+  <h4>General:</h4>
     <dd>- Basic linux terminal skills </dd>
     <dd>- Binary</dd>
     <dd>- Hexadecimal</dd>
@@ -59,7 +59,7 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
     <dd>- Vignere cipher</dd>
     <dd>- Arnold cipher</dd>
 
-  <h4>Programming</h4>
+  <h4>Programming:</h4>
     <dd>- Python</dd>
     <dd>- HTML/CSS</dd>
     <dd>- Javascript</dd>
