--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
 </p>
 <link rel="shortcut icon" type="image/png" href="assets/images/banners/favicon.png">
 <p>I have a <a href="https://github.com/M-watermelon"> github page (M-watemelon)</a> where you can view the source code to <a href="https://github.com/M-watermelon/WatermelonBlog"> my website </a> and more of my projects.</p>
-
+<h2>Hobbies</h2>
+<p> I might have blog posts about hobbies such as art and skating (ice skating, roller skating, speed skating). I will probably set up a new section for my website for that.</p>
 <h2>Skills</h2>
 <h4>I earned the bronze badge in the 2022 Cyberstart America Competition.</h4>
 
