--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
 <h2>Hobbies</h2>
 <p> I might have blog posts about hobbies such as art and skating (ice skating, roller skating, speed skating). I will probably set up a new section for my website for that.</p>
 <h2>Skills</h2>
+<h4>I earned the silver badge in the 2022 Cyberstart America Competition. (Once I recieve the badge, I will add it here.)</h4>
+
 <h4>I earned the bronze badge in the 2022 Cyberstart America Competition.</h4>
 
 <img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/CyberStart America - CyberStart America Bronze Award 2021-22 - 2022-04-11.png?raw=true" alt="Bronze badge">
