--- a/about.html
+++ b/about.html
@@ -22,27 +22,18 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
 <dl>
   <h4>Forensics:</h4>
     <dd>- Steganography</dd>
-      <dd>- Pixel inversion</dd>
-      <dd>- Image overlapping</dd>
-      <dd>- Stegsolve</dd>
-    <dd>- Binwalk</dd>
-    <dd>- Hexdump</dd>
-    <dd>- Sleuthkit</dd>
-    <dd>- Exiftool</dd>
-    <dd>- Sonic Visualizer</dd>
-    <dd>- Mimetype</dd>
-    <dd>- Strings</dd>
-    <dd>- unar</dd>
-    <dd>- ar</dd>
-    <dd>- 7zip</dd>
+    <dd>- Linux file systems</dd>
+    <dd>- File types</dd>
+    <dd>- Experience with remote connections like SSH</dd>
+
 
   <h4>Binary exploitation:</h4>
     <dd>- Endian: Big Endian and Little Endian</dd>
 
   <h4>General:</h4>
     <dd>- Basic linux terminal skills </dd>
-    <dd>- Binary</dd>
-    <dd>- Hexadecimal</dd>
+    <dd>- Understanding of number systems like hexadecimal, binary and Endian</dd>
+  
 
   <h4>Cryptography:</h4>
     <dd>- RSA algorithm</dd>
@@ -54,15 +45,9 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
     <dd>- Public and private keys</dd>
     <dd>- Timing attack</dd>
     <dd>- Frequency attack</dd>
-    <dd>- Railfence cipher</dd>
-    <dd>- Columnar transposition cipher</dd>
-    <dd>- Transposition/Permutation cipher: eg (1,2,3) -> (2,1,3)</dd>
-    <dd>- Caesar cipher</dd>
-    <dd>- Substitution cipher & frequency analysis</dd>
-    <dd>- Vignere cipher</dd>
-    <dd>- Arnold cipher</dd>
+    <dd>- Knowledge of different ciphers and forms of encryption (Railfence cipher, XOR, etc)</dd>
 
-  <h4>Programming:</h4>
+  <h4>Programming basics:</h4>
     <dd>- Python</dd>
     <dd>- HTML/CSS</dd>
     <dd>- Javascript</dd>
