--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ layout: home
 title: Home
 banner: assets/images/banners/watermelon_4x.png
 ---
+<link rel="shortcut icon" type="image/png" href="assets/images/banners/favicon2.png">
