--- a/about.html
+++ b/about.html
@@ -12,18 +12,27 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
 <p>I have a <a href="https://github.com/M-watermelon"> github page (M-watemelon)</a> where you can view the source code to <a href="https://github.com/M-watermelon/WatermelonBlog"> my website </a> and more of my projects.</p>
 <h2>Hobbies</h2>
 <p> I might have blog posts about hobbies such as art and skating (ice skating, roller skating, speed skating). I will probably set up a new section for my website for that.</p>
-<h2>Skills</h2>
+<h2>Awards/Accomplishments</h2>
 <h4>I was a finalist in the 2022 Cyberstart America Competition, also recieving the rank of semifinalist. </h4>
-<img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/finalist.png?raw=true" alt="Finalist badge">
-<img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/semifinalist.png?raw=true" alt="Semifinalist badge">
+<div class="row">
+  <div class="column">
+    <img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/semifinalist.png?raw=true" alt="Semifinalist badge">
+  </div>
+  <div class="column">
+    <img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/finalist.png?raw=true" alt="Finalist badge">
+  </div>
+</div>
 
-<h4>I earned the silver award in the 2022 Cyberstart America Competition.</h4>
-
-<img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/CyberStart America - CyberStart America Silver Award 2021-22 - 2022-05-19.png?raw=true" alt="Bronze badge">
-<h4>I earned the bronze award in the 2022 Cyberstart America Competition.</h4>
-
-<img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/CyberStart America - CyberStart America Bronze Award 2021-22 - 2022-04-11.png?raw=true" alt="Bronze badge">
-
+<h4>I earned the silver and bronze awards in the 2022 Cyberstart America Competition.</h4>
+<div class="row">
+  <div class="column">
+    <img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/CyberStart America - CyberStart America Silver Award 2021-22 - 2022-05-19.png?raw=true" alt="Silver badge">
+  </div>
+  <div class="column">
+    <img style = "  display: block; margin-left: auto; margin-right: auto; width: 50%;" src="https://github.com/M-watermelon/WatermelonBlog/blob/main/assets/images/banners/CyberStart America - CyberStart America Bronze Award 2021-22 - 2022-04-11.png?raw=true" alt="Bronze badge">
+  </div>
+</div>
+<h2>Skills/Knowledge</h2>
 <dl>
   <h4>Forensics:</h4>
     <dd>- Steganography</dd>
@@ -58,3 +67,17 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
     <dd>- Javascript</dd>
 
 </dl>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 50%;
+  padding: 5px;
+}
+</style>
