modified:   _posts/2022-08-08-Back-in-action.md modified:   about.html

--- a/about.html
+++ b/about.html
@@ -10,8 +10,6 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
 </p>
 <link rel="shortcut icon" type="image/png" href="assets/images/banners/favicon2.png">
 <p>I have a <a href="https://github.com/M-watermelon"> github page (M-watemelon)</a> where you can view the source code to <a href="https://github.com/M-watermelon/WatermelonBlog"> my website </a> and more of my projects.</p>
-<h2>Hobbies</h2>
-<p> I might have blog posts about hobbies such as art and skating (ice skating, roller skating, speed skating). I will probably set up a new section for my website for that.</p>
 <h2>Awards/Accomplishments</h2>
 <h4>I was a finalist in the 2022 Cyberstart America Competition, also recieving the rank of semifinalist. </h4>
 <div class="row">
@@ -65,8 +63,12 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
     <dd>- Python</dd>
     <dd>- HTML/CSS</dd>
     <dd>- Javascript</dd>
+    <dd>- BASH</dd>
 
 </dl>
+
+<h2>Hobbies</h2>
+<p> I like art, reading, programming/cybersecurity, speed skating, cycling, gaming, and taking care of orchids. I already blog about programming and cybersecurity, but I might set up a new blog section for my other hobbies too. </p>
 <style>
 * {
   box-sizing: border-box;
