--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: About
 <h2>About</h2>
 
 <p>
-Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to update it with new posts pretty often. I'll keep a guide / running track of what I learn about cybersecurity. I can be contacted at <span style="color:#62578a;">m.watermelon20@gmail.com</span>.
+Hello, this is my coding and cybersecurity blog. I'm going to update it with new posts pretty often. I'll keep a guide / running track of what I learn about cybersecurity. 
 </p>
 <link rel="shortcut icon" type="image/png" href="assets/images/banners/favicon2.png">
 <p>I have a <a href="https://github.com/M-watermelon"> github page (M-watemelon)</a> where you can view the source code to <a href="https://github.com/M-watermelon/WatermelonBlog"> my website </a> and more of my projects.</p>
@@ -68,7 +68,7 @@ Hello, I'm Maria, and this is my coding and cybersecurity blog. I'm going to upd
 </dl>
 
 <h2>Hobbies</h2>
-<p> I like art, reading, programming/cybersecurity, speed skating, cycling, gaming, and taking care of orchids. I already blog about programming and cybersecurity, but I might set up a new blog section for my other hobbies too. </p>
+<p> I like art, reading, and programming/cybersecurity. I already blog about programming and cybersecurity, but I might set up a new blog section for my other hobbies too. </p>
 <style>
 * {
   box-sizing: border-box;
